# mb_description

./: README.md  package.xml  setup.cfg  setup.py
config/: amcl_params.yaml  ekf.yaml  indoor_map_vslam.pgm  indoor_map_vslam.yaml  ros2control.yaml  rviz.rviz
launch/: lidar_slam.launch.py  nav2.launch.py  robot.launch.py  rtab.launch.py  rviz.launch.py
mb_description/: data_collector.py  diff_driver.py  image_show.py
resource/: mb.urdf
worlds/controllers/: controller.py
worlds/proto/: Astra.proto  Rosbot.proto
worlds/worlds/: world.wbt
